--- a/src/main/webapp/assets/signup/style.css
+++ b/src/main/webapp/assets/signup/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 .wrapper{
-    width: 750px;
+    width: 775px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
@@ -31,14 +31,14 @@ body{
     flex-direction: row;
 }
 
-.wrapper .login-form{
-    width: 350px;
+.wrapper .register-form{
+    width: 375px;
     height: fit-content;
     align-self: center;
 }
 
 .wrapper .left-image{
-    width: 280px;
+    width: 300px;
     height: fit-content;
     background: transparent;
     align-self: center;
@@ -81,27 +81,6 @@ body{
     font-size: 20px;
 }
 
-.wrapper .remember-forgot{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot label input{
-    accent-color: #fff;
-    margin-right: 3px;
-}
-
-.remember-forgot a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.remember-forgot a:hover{
-    text-decoration: underline;
-}
-
 .wrapper .btn {
     width: 100%;
     height: 45px;
@@ -134,11 +113,11 @@ body{
 
 @media only screen and (max-width: 720px) {
     .wrapper {
-        width: 350px;
+        width: 375px;
         flex-direction: column;
         align-items: flex-start;
     }
     .wrapper .login-form {
-        width: 300px;
+        width: 325px;
     }
 }
