--- a/src/main/webapp/assets/login/login-style.css
+++ b/src/main/webapp/assets/login/login-style.css
@@ -81,27 +81,6 @@ body{
     font-size: 20px;
 }
 
-.wrapper .remember-forgot{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot label input{
-    accent-color: #fff;
-    margin-right: 3px;
-}
-
-.remember-forgot a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.remember-forgot a:hover{
-    text-decoration: underline;
-}
-
 .wrapper .btn {
     width: 100%;
     height: 45px;
@@ -132,6 +111,17 @@ body{
     text-decoration: underline;
 }
 
+.toggle_button {
+    position: absolute;
+    top: 50%;
+    color: #ffffff;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
 @media only screen and (max-width: 720px) {
     .wrapper {
         width: 350px;
@@ -141,4 +131,20 @@ body{
     .wrapper .login-form {
         width: 300px;
     }
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+    margin-top: 50px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
